--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==3.2.4
 django-filter==2.4.0
 djangorestframework==3.12.4
 idna==2.10
+jsonpath==0.82
 Markdown==3.3.4
 pytz==2021.1
 requests==2.25.1
